--- a/sentiment_analysis.ipynb
+++ b/sentiment_analysis.ipynb
@@ -927,16 +927,15 @@
    "source": [
     "from collections import Counter\n",
     "print(\"semua kata dalam token : \", len(all_tokens))\n",
-    "dokumen_input = all_tokens\n",
     "\n",
-    "counts = Counter(dokumen_input)\n",
-    "kata = counts.keys()\n",
-    "count_kata = counts.values()\n",
-    "df_x = pd.DataFrame(count_kata, index = kata)\n",
-    "df_x = df_x.sort_values(0,ascending=False)\n",
+    "input_doc = all_tokens\n",
+    "counts = Counter(input_doc)\n",
     "\n",
-    "kata = df_x.index\n",
-    "count_kata = df_x[0].tolist()"
+    "word = counts.keys()\n",
+    "count_word = counts.values()\n",
+    "\n",
+    "df_coba = pd.DataFrame(count_word, index = word)\n",
+    "df_coba = df_coba.sort_values(0,ascending=False)"
    ]
   },
   {
@@ -1108,11 +1107,9 @@
     }
    ],
    "source": [
-    "# calculate top 25 negative word from all data\n",
-    "dokumen_input = kata\n",
-    "        \n",
-    "df_kata_v_neg_baru = df_x.copy()\n",
-    "df_kata_v_neg_baru.head(25)"
+    "# calculate top 25 negative word from all data        \n",
+    "df_word_neg = df_coba.copy()\n",
+    "df_word_neg.head(25)"
    ]
   },
   {
@@ -1135,8 +1132,8 @@
    ],
    "source": [
     "# word category in negative review\n",
-    "heights = df_kata_v_neg_baru[0][0:26]\n",
-    "tick_labels = df_kata_v_neg_baru.index.tolist()[0:26]\n",
+    "heights = df_word_neg[0][0:26]\n",
+    "tick_labels = df_word_neg.index.tolist()[0:26]\n",
     "\n",
     "cast_term = ['like', 'even', 'good', 'character','people','thing']\n",
     "storyline_term = ['movie', 'film', 'bad','scene','story','plot']\n",
